# askii-rtx

./: .gitignore  APPS_COMPARISON.md  BUILD.md  CMakeLists.txt  COMPLETION_REPORT.md  GUI_README.md  INDEX.txt  INSTALLATION.md  INTERACTIVE_README.md  PROJECT_DESCRIPTION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_COMMANDS.txt  QUICK_START.md  README.md  START_HERE.md  baker.py  build.bat  build.ps1  camera.py  char_calibration.py  config.ini  config.py  download_deps.ps1  imgui.ini  lighting.py  main.py  materials.py  render.py  run.bat  run_gui.bat  run_interactive.bat  scene.py  setup.ps1  tracer.py  ui.py  video_ascii.py
apps/viewer/: main.py
config/: default.py
engine/: camera.py  core.py  lighting.py  render.py  scene.py
geometry/: box.py  plane.py  sphere.py
pipeline/: baker.py  video_ascii.py
src/: common.h
src/apps/gui/: app_config.cpp  app_config.h  ascii_renderer.cpp  ascii_renderer.h  imgui_setup.cpp  imgui_setup.h  main.cpp
src/apps/interactive/: console_ui.cpp  console_ui.h  input_handler.cpp  input_handler.h  main.cpp
src/apps/viewer/: main.cpp  ui.cpp  ui.h
src/config/: default.cpp  default.h
src/engine/: camera.cpp  camera.h  core.cpp  core.h  lighting.cpp  lighting.h  materials.cpp  materials.h  render.cpp  render.h  scene.cpp  scene.h
src/geometry/: box.cpp  box.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/pipeline/: video_ascii.cpp  video_ascii.h
src/utils/: char_calibration.cpp  char_calibration.h
